# bruce

./: LICENSE  README.md  install.sh
bruce/: package.xml
bruce_exploration/: CMakeLists.txt  bruce_exploration_planner_plugin.xml  package.xml
bruce_exploration/config/: exploration.rviz  exploration.yaml  play.rviz  rosconsole.config
bruce_exploration/config/move_base/: global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
bruce_exploration/include/bruce_exploration/: exploration_client.h  exploration_planner.h
bruce_exploration/include/bruce_exploration/base/: belief_propagation.h  cost_map.h  exploration_server.h  exploration_server.hpp  math.h  path_library.h  targets.h  types.h  utility_function.h  virtual_map.h
bruce_exploration/include/bruce_exploration/planner/: em_exploration_server.h  heuristic_exploration_server.h  nbv_exploration_server.h  nf_exploration_server.h
bruce_exploration/launch/: exploration.launch  move_base.launch
bruce_exploration/scripts/: plot_em.py  plot_real.py
bruce_exploration/src/bruce_exploration/: exploration_client.cpp  exploration_planner.cpp  exploration_server.cpp
bruce_exploration/src/bruce_exploration/base/: belief_propagation.cpp  cost_map.cpp  math.cpp  path_library.cpp  targets.cpp  utility_function.cpp  virtual_map.cpp
bruce_exploration/src/bruce_exploration/planner/: em_exploration_server.cpp  heuristic_exploration_server.cpp  nbv_exploration_server.cpp  nf_exploration_server.cpp
bruce_msgs/: CMakeLists.txt  package.xml
bruce_slam/: CMakeLists.txt  package.xml
bruce_slam/config/: feature.yaml  icp.yaml  localization.rviz  localization.yaml  slam.rviz  slam.yaml  usmma.gps
bruce_slam/launch/: feature_extraction.launch  localization.launch  mapping.launch  slam.launch
bruce_slam/scripts/: feature_extraction_node.py  localization_node.py  slam_node.py
bruce_slam/src/: .gitignore
bruce_slam/src/bruce_slam/: feature.py  mapping.py  slam.py  sonar.py
bruce_slam/src/bruce_slam/utils/: conversions.py  topics.py  visualization.py
