<?xml version="1.0"?>
<package format="2">
  <name>bruce_exploration</name>
  <version>0.0.1</version>
  <description>Exploration</description>

  <maintainer email="mejkunw@gmail.com">Jinkun Wang</maintainer>
  <license>BSD 3-Clause License</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>bruce_msgs</depend>
  <depend>GTSAM</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>navfn</depend>
  <export>
    <nav_core plugin="${prefix}/bruce_exploration_planner_plugin.xml"/>
  </export>
</package>
